# simcloud

./: .gitignore  .gzbridge.patch.swp  README.md  README_add_joystick.md  build_experimental.sh  build_ros_melodic_desktop_px4.sh  build_ros_melodic_desktop_px4_nocache.sh  build_simulator.sh  frames.gv  gzbridge.patch  init_drone.sh  test_launchfile.sh
demo/: DEMO_README.md  demo_setup.sh  launch_pos_control.sh  launch_uav.sh
docker/: DOCKER_README.md  README.md  README_Docker.md  ros_melodic_desktop_full
docker/experimental/: Dockerfile  run.sh  run_container_and_sim.sh  run_intel.sh  run_no_nvidia.sh
docker/new_ros_melodic_desktop_px4/: Dockerfile  README.md  build_mavros.sh  run.sh
docker/ros2_foxy_behavior_trees/: Dockerfile  build.sh  run.sh
docker/ros_melodic_desktop_px4/: Dockerfile  run.sh  run_container_and_sim.sh  run_intel.sh  run_no_nvidia.sh
docker/ros_melodic_desktop_px4/ros_packages/: .gitignore
docker/ros_melodic_desktop_px4/ros_packages/src/uav/: CMakeLists.txt  package.xml
docker/ros_melodic_desktop_px4/ros_packages/src/uav/cfg/: GlobalPlannerNode.cfg  px4_config.yaml
docker/ros_melodic_desktop_px4/ros_packages/src/uav/gazebo_model/models/nxp_drone_lidar/: nxp_drone.sdf
docker/ros_melodic_desktop_px4/ros_packages/src/uav/launch/: spawn_nxp.launch  spawn_uav.launch  start_mavros.launch
docker/ros_melodic_desktop_px4/ros_packages/src/uav/scripts/: arm_uav.sh
docker/ros_melodic_desktop_px4/ros_packages/src/uav/src/: FLYinCircle.py  FramesPublisher.py
docker/ros_melodic_desktop_px4_webots/: Dockerfile  run.sh  run_no_nvidia.sh
docker/ros_melodic_desktop_webots/: Dockerfile  README.md  run.sh  run_no_nvidia.sh
docker/ros_melodic_webots/: Dockerfile  run.sh  run_no_nvidia.sh
docker/simulator/: Dockerfile  docker-compose.yml  docker-compose.yml.save  run.sh  run_container_and_sim.sh  run_intel.sh  run_no_nvidia.sh  start_simulator.sh
docker/simulator/web_scripts/: config.json  start_gzweb.sh  start_rvizweb.sh  start_web_terminal.sh
docker/simulator/web_terminal_scripts/: start_web_terminal.sh
docker/simulator_galactic_ignition/: .Dockerfile.swp  Dockerfile  gzbridge.patch  run.sh  websocket.ign
docker/simulator_ros2/: .Dockerfile.swp  Asimovo3.jupyterlab-workspace  Dockerfile  build_simulator_ros2.sh  log_install_docker.txt  run.sh  test.html  test_launchfile.sh
docker/simulator_ros2/web_scripts/: .start_workspace.sh.swp  Asimovo.jupyterlab-workspace  README.md  asimovo.jupyterlab-workspace  config.json  default.json  index.css  ros.html  roswiki.html  start_labs.sh  start_notebook.sh  start_web_terminal.sh  start_webviz.sh  start_workspace.sh  zethus.html
docker/simulator_ros2_ignition/: Dockerfile  build.sh  run.sh  test_launchfile.sh
docker/simulator_ros2_ignition/ros2_packages/src/gzweb_model/: package.xml
docker/simulator_ros2_ignition/web_scripts/: start_web_terminal.sh
docker/simulator_ros2_jupyter/: Dockerfile  build_log.txt  log_install_docker.txt  run.sh
docker/simulator_ros2_jupyter/rosbot_files/: rosbot.sdf
docker/simulator_ros2_jupyter/web_scripts/: start_lab.sh  start_notebook.sh
gzweb_model_db/collapsed_house/meshes/: house2.stl  ramp.dae
gzweb_model_db/coolsingel_description/: CMakeLists.txt  model.sdf
gzweb_model_db/coolsingel_description/launch/: coolsingel_world.launch
gzweb_model_db/coolsingel_description/meshes/: cube.dae
gzweb_model_db/human_resting_description/: README.md  model.sdf  package.xml
gzweb_model_db/human_resting_description/meshes/: man_resting.dae
gzweb_model_db/iris/: model.config
gzweb_model_db/iris_camera/: iris_camera.sdf
gzweb_model_db/iris_depth_camera/: iris_depth_camera.sdf
gzweb_model_db/iris_front_camera/: iris_front_camera.sdf  model.config
gzweb_model_db/iris_lidar/: model.config
gzweb_model_db/iris_rplidar/: model.config
gzweb_model_db/led_light_small/: model.config  model.sdf
gzweb_model_db/nxp_drone/: model.config
gzweb_model_db/rover_description/: README.md  model.config
gzweb_model_db/rover_description/include/: broadcast_cart.h
gzweb_model_db/rover_description/meshes/: astra.dae  front_wheel_right.stl  rover_cart.dae
gzweb_model_db/rover_description/urdf/: ar_tag.urdf.xacro  ar_tag_multiple.urdf.xacro  camera.urdf.xacro  (+4 more)
gzweb_model_db/small_light/: model.sdf
gzweb_model_db/usb_camera/: .model.sdf.swp  model.config  model.sdf
gzweb_model_db/velodyne_HDL32/: model.sdf
projects_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
ros_packages/: .gitignore  11_27_59.ulg  core
ros_packages/src/gzweb_model/: gzweb_model.bash  package.xml
ros_packages/src/mav_teleop_twist_joy/: CMakeLists.txt  Readme.md  mav_teleop_twist_joy (copy).py  mav_teleop_twist_joy.py
ros_packages/src/mav_teleop_twist_keyboard/: Readme.md  mav_teleop_twist_keyboard.py  package.xml
ros_packages/src/playground_world/: package.xml
ros_packages/src/playground_world/launch/: playground_world.launch
ros_packages/src/rover/rover_description/: CMakeLists.txt  README.md  model.config  package.xml
ros_packages/src/rover/rover_description/meshes/: base_cart.stl  rover_cart.stl
ros_packages/src/rover/rover_description/meshes/backup/: front_wheel.stl
ros_packages/src/rover/rover_description/meshes/blender/: base_cart.blend  base_cart.blend1  frontwheel.blend  frontwheelMIR.blend  frontwheelMIR.blend1  twowheels.blend  untitled.blend
ros_packages/src/rover/rover_description/src/: broadcast_cart.cpp  broadcast_cart_node.cpp  broadcast_rover.cpp
ros_packages/src/rover/rover_description/urdf/: ar_tag.urdf.xacro  ar_tag_multiple.urdf.xacro  base_fox_cart_verticaltag.urdf.xacro  base_rover.gazebo.xacro  base_rover.urdf.xacro  base_rover_big_top.urdf.xacro  base_rover_big_top_4w.urdf.xacro  base_rover_cart.gazebo.xacro  base_rover_cart_gzweb.sdf  base_rover_cart_verticaltag.urdf.xacro  base_rover_verticaltag.urdf.xacro  camera.urdf.xacro  caster.urdf.xacro  common_properties.xacro  laser.urdf.xacro  logo.urdf.xacro  logo_big.urdf.xacro  wheel.urdf.xacro
web_scripts/: start_gzweb.sh  start_rvizweb.sh  start_web_terminal.sh  start_webviz.sh
(+333 files in other folders)
