<?xml version="1.0"?>
<package>
  <name>mav_teleop_twist_keyboard</name>
  <version>1.0.0</version>
  <description>Generic keyboard teleop for mavs (micro-aerial-vehicles) based on the teleop twist keyboard package.</description>

  <maintainer email="reka@dobots.nl">Reka Berci-Hajnovics</maintainer>

  <license>BSD</license>

 <!-- <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>-->

 <!-- <author>Graylin Trevor Jay</author>-->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
