<?xml version="1.0"?>
<package format="2">
  <name>playground_world</name>
  <version>0.0.0</version>
  <description>The description and launch files of a playground wolrd</description>

  <maintainer email="info@dobots.nl">DoBots</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  

</package>
