<?xml version="1.0"?>
<package format="3">
  <name>gzweb_model</name>
  <version>1.0.0</version>
  <description>a ROS2 package which helps gzweb to find .sdf models</description>

  <maintainer email="reka@dobots.nl">Reka Berci-Hajnovics</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
   <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
